--- a/source/_posts/2014-01-09-test.markdown
+++ b/source/_posts/2014-01-09-test.markdown
@@ -22,3 +22,86 @@ class Fixnum
   end
 end
 ```
+
+Ceci est un titre
+====
+1. test
+2. test
+
+```  
+test
+test
+System.out.println("toto");
+```
+
+Mon test `code` fin de mon texte
+
+> Ce texte apparaîtra dans un élément HTML blockquote.
+
+* Pommes
+* Poires
+    * Sous élément avec au moins quatre espaces devant.
+
+# un titre de premier niveau
+#### un titre de quatrième niveau
+
+
+[texte du lien](url_du_lien "texte pour le titre, facultatif")
+
+![Texte alternatif](url_de_l'image "texte pour le titre, facultatif")
+
+
+> This is the first level of quoting.
+>
+> > This is nested blockquote.
+>
+> Back to the first level.
+
+
+> ## This is a header.
+> 
+> 1.   This is the first list item.
+> 2.   This is the second list item.
+> 
+> Here's some example code:
+> 
+>     return shell_exec("echo $input | $markdown_script");
+
+```
+require 'redcarpet'
+markdown = Redcarpet.new("Hello World!")
+puts markdown.to_html
+```
+
+- Use a minus sign for a bullet
++ Or plus sign
+* Or an asterisk
+
+
+1. Lists in a list item:
+    - Indented four spaces.
+        * indented eight spaces.
+    - Four spaces again.
+2.  Multiple paragraphs in a list items:
+    It's best to indent the paragraphs four spaces
+    You can get away with three, but it can get
+    confusing when you nest other things.
+    Stick to four.
+ 
+    We indented the first line an extra space to align
+    it with these paragraphs.  In real use, we might do
+    that to the entire list so that all items line up.
+ 
+    This paragraph is still part of the list item, but it looks messy to humans.  So it's a good idea to wrap your nested paragraphs manually, as we did with the first two.
+ 
+3. Blockquotes in a list item:
+ 
+    > Skip a line and
+    > indent the >'s four spaces.
+ 
+4. Preformatted text in a list item:
+ 
+        Skip a line and indent eight spaces.
+        That's four spaces for the list
+        and four to trigger the code block.
+
